[package]
name = "any-shape-similarity-join-approx-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avl = "*"
rand = "*"
queues = "*"
mut-binary-heap = "0.1.0"

[features]
default = ["weighted_edges", "cell_distance_center", "l2_metric", "static"]
cell_distance_points = []
cell_distance_center = []
cell_distance_vertices = []
l1_metric = []
l_inf_metric = []
l2_metric = []
static = []
dynamic = []
variable_r = []
normal = []
weighted_vertices = []
weighted_edges = []